<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_note_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddNote">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            android:text="@string/add_note"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintStart_toEndOf="@+id/back_button"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:contentDescription="@string/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_arrow_back_56" />

        <ImageView
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="?attr/actionBarSize"
            android:contentDescription="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_save_56" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/note_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="name"
        android:background="#00000000"
        android:hint="@string/title"
        android:inputType="text"
        android:textColor="@color/black"
        android:textColorHint="@color/bg_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <EditText
        android:id="@+id/note_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:autofillHints="Note Description"
        android:background="#00000000"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:textColor="@color/black"
        android:textColorHint="@color/bg_main"
        app:layout_constraintBottom_toTopOf="@+id/color_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/note_title"
        app:layout_constraintVertical_bias="0.0" />

    <HorizontalScrollView
        android:id="@+id/color_list"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/color1"
                android:layout_width="128dp"
                android:layout_height="match_parent"
                android:background="#00000000"
                android:contentDescription="@string/color"
                android:src="@color/white" />

            <ImageButton
                android:id="@+id/color2"
                android:layout_width="128dp"
                android:layout_height="56dp"
                android:background="#00000000"
                android:contentDescription="@string/color"
                android:src="@color/aqua" />

            <ImageButton
                android:id="@+id/color3"
                android:layout_width="128dp"
                android:layout_height="56dp"
                android:background="#00000000"
                android:contentDescription="@string/color"
                android:src="@color/crimson" />

            <ImageButton
                android:id="@+id/color4"
                android:layout_width="128dp"
                android:layout_height="56dp"
                android:background="#00000000"
                android:contentDescription="@string/color"
                android:src="@color/bitter_sweat" />

            <ImageButton
                android:id="@+id/color5"
                android:layout_width="128dp"
                android:layout_height="56dp"
                android:background="#00000000"
                android:contentDescription="@string/color"
                android:src="@color/celadon" />

            <ImageButton
                android:id="@+id/color6"
                android:layout_width="128dp"
                android:layout_height="56dp"
                android:background="#00000000"
                android:contentDescription="@string/color"
                android:src="@color/lavender" />

            <ImageButton
                android:id="@+id/color7"
                android:layout_width="128dp"
                android:layout_height="56dp"
                android:background="#00000000"
                android:contentDescription="@string/color"
                android:src="@color/linen" />

            <ImageButton
                android:id="@+id/color8"
                android:layout_width="128dp"
                android:layout_height="56dp"
                android:background="#00000000"
                android:contentDescription="@string/color"
                android:src="@color/scarlet" />

        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>